--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Compensação de Ausência</title>
+
 </head>
 <body>
   <div id="app">
@@ -73,6 +74,13 @@
         </div>
     </div>
   </div>
+  <div id="imageModal" class="modal hidden">
+    <div class="modal-content">
+      <span id="closeModal" class="close">&times;</span>
+      <img id="modalImage" src="" alt="Imagem ampliada">
+    </div>
+  </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
