--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="imagex/png" href="img/iconteste3.jpg">
     <title>Compensação de Ausência</title>
 
 </head>
@@ -11,12 +12,15 @@
   <div id="app">
     <div id="server-sidebar">
         <div class="server-icon" data-server-id="1">
-            <img src="img/iconteste1.jpg" alt="Server 1">
+            <img src="img/Instagram-Logo.png" alt="Server 1">
         </div>
         <div class="server-icon" data-server-id="2">
-          <img src="img/iconteste2.jpg" alt="Server ">
+          <img src="../empreendedorismo/imgEmpreendedorismo/logoRPGHub.png" alt="Server ">
         </div>
         <div class="server-icon" data-server-id="3">
+            <img src="img/iconteste3.jpg" alt="Server 3">
+        </div>
+        <div class="server-icon" data-server-id="4">
             <img src="img/iconteste3.jpg" alt="Server 3">
         </div>
     </div>
@@ -32,9 +36,9 @@
                 <h2>Canais</h2>
             </div>
             <ul id="channelList">
-                <li class="channel-item" data-channel-id="1" data-channel-name="# geral"># geral</li>
-                <li class="channel-item" data-channel-id="2" data-channel-name="# jogos"># jogos</li>
-                <li class="channel-item" data-channel-id="3" data-channel-name="# música"># música</li>
+                <li class="channel-item" data-channel-id="1" data-channel-name=""></li>
+                <li class="channel-item" data-channel-id="2" data-channel-name=""></li>
+                <li class="channel-item" data-channel-id="3" data-channel-name=""</li>
             </ul>
         </div>
     </div>
