--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <div id="main-content">
         <div id="chat-header">
-            <h2 id="channelName">Servidor 1 - # geral</h2>
+            <h2 id="channelName">Servidor 1 </h2>
         </div>
         <div id="chat-area" class="chat-area-expanded">
             <ul id="messageList">
